--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ curl -X POST -H "Content-Type: application/json" -H "Cache-Control: no-cache" -H
 }' "http://grad.geography.wisc.edu:8080/data"
 </pre>
 <h3 id="documentation">Documentation</h3>
-<p>To see all the docs, go <a href="http://grad.geography.wisc.edu/cds">here</a>.</p>
+<p>To see all the docs, go <a href="http://grad.geography.wisc.edu/cds/docs">here</a>.</p>
 </div>
 </body>
 </html>
